tests/paczka2/big_fuzzy/96252121.err
Error in line 12: ldphnoRrvQ A938 67,3
Error in line 16: ldphnoRrvQ A231 -4,8
Error in line 9: S257 A938 38,8
Error in line 21: mOFD A938 -3,3
Error in line 20: mOFD A938 53,8
Error in line 39: 070repxnCC A938 59,9
Error in line 14: ldphnoRrvQ A231 54,0
Error in line 35: aOEqz8IFAE A938 72,5
Error in line 43: aOEqz8IFAE A37 71,8
Error in line 41: 070repxnCC A231 29,0
Error in line 31: S257 A37 229,6
Error in line 59: O0s3h0PXwqA S257 15,34
Error in line 49: O0s3h0PXwqA S257 28,5
Error in line 57: S257 A938 78,8
Error in line 62: S257 S257 97,0
Error in line 66: S257 A231 58,5
Error in line 67: S257 S257 4,5
Error in line 72: aOEqz8IFAE A231 89,1
Error in line 77: aOEqz8IFAE S257 24,6
Error in line 84: O0s3h0PXwqA A231 1,4
Error in line 89: ldphnoRrvQ S257 97,8
Error in line 25: 6J0FiYLkL A231 94,2
Error in line 86: O0s3h0PXwqA A37 70,8
Error in line 98: 6J0FiYLkL A37 97,7
Error in line 88: mOFD A37 390,0
Error in line 102: mOFD S257 89,2
Error in line 104: mOFD A37 50,3
Error in line 113: mOFD A231 42,2
Error in line 115: mOFD A938 26,4
Error in line 127: S257 A231 *7,3
Error in line 117: S257 A231 70,8
Error in line 111: 070repxnCC A37 228,6
Error in line 138: 6J0FiYLkL A938 -2,6
Error in line 131: 6J0FiYLkL A938 23,2
Error in line 137: O0s3h0PXwqA A37 353,1
Error in line 164: O0s3h0PXwqA A231 58,2
Error in line 179: 070repxnCC A231 11,6
Error in line 181: ldphnoRrvQ A938 28,6
Error in line 182: ldphnoRrvQ A231 73,4
Error in line 191: 070repxnCC S257 11,8
Error in line 195: aOEqz8IFAE A938 53,7
Error in line 221: aOEqz8IFAE A231 8,3
Error in line 226: O0s3h0PXwqA A231 99,3
Error in line 237: mOFD A37 176,77
Error in line 236: mOFD A37 44,5
Error in line 240: mOFD S257 54,9
